fix: popover z-index

--- a/src/module-system/a-components-sync/front/src/assets/css/module.less
+++ b/src/module-system/a-components-sync/front/src/assets/css/module.less
@@ -380,6 +380,11 @@ input[type='search']::-webkit-search-decoration {
     display: flex;
   }
 
+  .popover {
+    // > sidebar 20000
+    z-index: 21000;
+  }
+
   .treeview-item {
     .treeview-item-root-end {
       flex-grow: 1;
